# ftag

./: .gitignore  CMakeLists.txt  aruco-uninstalled.pc  aruco.pc  cmake_uninstall.cmake  ftag.yml
SPECS/: ftag.spec
ftag/: CMakeLists.txt  README.md  blockingqueue.hpp  ftag.cpp  ftag.yml  params.hpp  semaphore.hpp  video.hpp
ftag/cdata/: logitech_c920.yml  microsoft_hd3000.yml
utils/: aruco_batch_processing
utils_svm/: aruco_test_svm
